--- a/_sass/pages/_acerca.scss
+++ b/_sass/pages/_acerca.scss
@@ -1,72 +1,16 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the /acerca page.
 // -----------------------------------------------------------------------------
-.member-wrapper {
-	padding-left: 0;
-
-	& li {
-	    position: relative;
-	    width: 18.75em;
-	    height: 25em;
-	    margin: 0 auto;
-	    margin-top: 6.25em;
-	    background-color: $bgColor;
-	    border-radius: 3px;
-	    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	       -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	    		box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    	overflow: hidden;
-    	z-index: 1;
-
-    	&:last-child {
-    		margin-right: 0;
-    	}
-	}
-
-	& img {
-		max-width: 215px;
-	}
-
-	p {
-		margin: -7px 0 0 0;
-		padding: 5px 10px;
-		font-family: $mainFont;
-		color: $bgColor;
-		@include gradient($mainColor, $secondaryColor);
-	}
-
-	& .member-media {
-		display: flex;
-		align-items: center;
-		padding: 5px;
-	}
-
-	& a {
-		margin-left: 10px;
-	}
-}
-
-.media {
-	display: flex;
-	align-items: center;
-	padding: 5px;
-
-	& a {
-		margin-left: 5px;
-	}
-}
-
-
-
 .card--wrapper {
 	padding-left: 0;
+	margin-bottom: 1em;
 }
 
 	.card {
 		position: relative;
-	    width: 18.75em;
 	    height: 22em;
 	    margin: 0 auto 1em;
+	    float: left;
 	    background-color: $bgColor;
 	    border-radius: 3px;
 	    @include boxShador;
@@ -108,10 +52,48 @@
 		}
 	}
 
+@media screen and (max-width: 39.375em) {
+	.card {
+		width: 100%;
+	}
+}
 
 
+@media screen and (min-width: 39.375em) {
+	.card {
+		width: calc(50% - 1em);
+		margin: 0 1em 1em;
 
+		&:nth-child(1) {
+			margin-left: 0;
+		}
 
+		&:nth-child(2) {
+			margin-right: 0;
+		}
+
+		&:nth-child(3) {
+			margin: 0;
+		}
+	}
+}
+@media screen and (min-width: 62.125em) {
+	.card {
+		width: calc(33.33333% - 2em);
+
+		&:nth-child(1) {
+			margin-left: 0;
+		}
+
+		&:nth-child(2) {
+			margin: 0 1em;
+		}
+
+		&:nth-child(3) {
+			margin: 0 0 0 1em;
+		}
+	}
+}
 
 
 
